# nnstreamer-multicam

./: .gitignore  Cargo.toml  README.md
data/: get-data.sh  gst-launch-object-detection-tf.sh
docker/: Dockerfile  docker-compose.dev.yml
examples/: Cargo.toml  build.rs  cli_test.sh  streamid.rs
examples/src/: main.rs
nnmc-examples/: Cargo.toml  build.rs
nnmc-examples/src/: main.rs  meta.rs
nnmc-plugins/: Cargo.toml
nnmc-plugins/src/: lib.rs  meta.rs  muxer.rs
src/: lib.rs  main.rs  meta.rs  streamid.rs
