[package]
name = "nnstreamer-multicam"
version = "0.1.0"
authors = ["Daniel Suess <daniel@dsuess.me>"]
repository = "None"
license = "MIT/Apache-2.0"
edition = "2018"
description = "Multicam support for nnstreamer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "gstnnstreamermulticam"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[example]]
name = "streamid"
path = "examples/streamid.rs"

[dependencies]
glib = { git = "https://github.com/gtk-rs/glib" }
gstreamer = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
gstreamer-base = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
gstreamer-video = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
gstreamer-audio = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
gstreamer-app = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
once_cell = "*"

[build-dependencies]
gst-plugin-version-helper = { git = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs" }