[package]
name = "nnstreamer-multicam-tests"
version = "0.1.0"
authors = ["Daniel Suess <daniel@dsuess.me>"]
repository = "None"
license = "MIT/Apache-2.0"
edition = "2018"
description = "Multicam support for nnstreamer"
links = "gstnnstreamermulticam"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "run"
path = "src/main.rs"


[dependencies]
glib = { git = "https://github.com/gtk-rs/glib" }
gstreamer = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
gstreamer-base = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
gstreamer-video = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
gstreamer-audio = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
gstreamer-app = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
once_cell = "*"