[package]
name = "nnstreamer-multicam-examples"
version = "0.1.0"
authors = ["Daniel Suess <daniel@dsuess.me>"]
repository = "None"
license = "MIT/Apache-2.0"
edition = "2018"
description = "Tests and examples for nnstreamer-multicam-plugins"
links = "gstnnmc"

[[bin]]
name = "run"
path = "src/main.rs"


[dependencies]
glib = { git = "https://github.com/gtk-rs/glib" }
gstreamer = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
gstreamer-base = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
gstreamer-video = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
gstreamer-audio = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
gstreamer-app = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
nnstreamer-multicam-plugins = { path = "../nnmc-plugins/" }
once_cell = "*"
